<resources>
    <string name="app_name">Калькулятор</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_devide">/</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_equally">=</string>
    <string name="_multipl">x</string>
    <string name="_comma">,</string>
    <string name="_xxx">0</string>
    <string name="_del">del</string>
    <string name="_Clear">Clear</string>
    <string name="_Quadrat">x^2</string>
    <string name="_Procent">%</string>
</resources>
