<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/resultField"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/operationField"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_xxx"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_Quadrat"
            android:onClick="onOperationClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_Procent"
            android:onClick="onOperationClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_del"
            android:onClick="onDeleteClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_Clear"
            android:onClick="onClearClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_7" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            android:text="@string/_8" />
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_devide"
            android:onClick="onOperationClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_multipl"
            android:onClick="onOperationClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_minus"
            android:onClick="onOperationClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_comma"
            android:onClick="onNumberClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_plus"
            android:onClick="onOperationClick"/>
        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_equally"
            android:onClick="onOperationClick"/>
    </LinearLayout>
</LinearLayout>
